--- a/.env.example
+++ b/.env.example
@@ -5,10 +5,18 @@ TELEGRAM_ALLOWED_CHATS=-1001234567890,-1009876543210
 
 # AI Provider Configuration
 AI_PROVIDER=openai  # or anthropic
+
+# OpenAI LLM Configuration
 OPENAI_API_KEY=your_openai_api_key_here
+OPENAI_ENDPOINT=  # Optional: Custom endpoint (for third-party OpenAI-compatible APIs)
 OPENAI_MODEL=gpt-4o-mini
+
+# OpenAI Embedding Configuration (can be different provider than LLM)
+OPENAI_EMBEDDING_API_KEY=your_openai_embedding_api_key_here  # Optional: If different from OPENAI_API_KEY
+OPENAI_EMBEDDING_ENDPOINT=  # Optional: If different from OPENAI_ENDPOINT
 OPENAI_EMBEDDING_MODEL=text-embedding-3-small
 
+# Anthropic Configuration
 ANTHROPIC_API_KEY=your_anthropic_api_key_here
 ANTHROPIC_MODEL=claude-3-haiku-20240307
 
@@ -38,6 +46,10 @@ FEATURE_CONTENT_EXTRACTION=true
 FEATURE_OCR_ENABLED=true
 
 # Logging Configuration
+# Available levels: DEBUG, INFO, WARNING, ERROR
+# DEBUG: Detailed debug information (for development)
+# INFO: Important business events (default)
+# WARNING: Warning messages (non-fatal errors)
+# ERROR: Error messages (affect functionality)
+# Note: Logs are output to console only in structured logfmt format
 LOG_LEVEL=INFO
-LOG_FORMAT=json
-SENTRY_DSN=optional_sentry_dsn_here
